--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,11 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.2 (unreleased)
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.1 (released 2009-03-25)
 
 ** DIGEST-MD5 client: Add support for client integrity layer.
