--- a/README
+++ b/README
@@ -6,12 +6,13 @@ This directory holds GNU SASL which is an implementation of the Simple
 Authentication and Security Layer (SASL).  See doc/gsasl.{info,ps,pdf}
 for the manual.
 
-The GNU SASL library is licensed under the GNU Lesser General Public
-License (LGPL) version 2.1 (or later).  The GNU project typically uses
-the GNU General Public License (GPL) for libraries, and not the LGPL,
-but for this project we decided that we would get more help from the
-community if we used the LGPLv2.1+, as other free SASL implementations
-exists.  See also <http://www.gnu.org/licenses/why-not-lgpl.html>.
+The GNU SASL library (lib/) is licensed under the GNU Lesser General
+Public License (LGPL) version 2.1 (or later).  See the file
+lib/COPYING.  The GNU project typically uses the GNU General Public
+License (GPL) for libraries, and not the LGPL, but for this project we
+decided that we would get more help from the community if we used the
+LGPLv2.1+, as other free SASL implementations exists.  See also
+<http://www.gnu.org/licenses/why-not-lgpl.html>.
 
 The command-line application and test suite (src/, and tests/) are
 licensed under the GNU General Public License license version 3.0 (or
