--- a/THANKS
+++ b/THANKS
@@ -37,6 +37,7 @@ Pawel Widera
 Gazsó Attila
 Adam Goode <adam@spicenitz.org>
 Andery Melnikov <temnota.am@gmail.com>
+Vincent Untz <vuntz@opensuse.org>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
