--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.2 (unreleased)
 
+** gsasl: Fix out of bounds write when in IMAP/SMTP mode.
+Reported by Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de> in
+<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/230>.
+
 ** doc: Improved sections for the info manual.
 We now follow the advice given by the texinfo manual on which
 directory categories to use.  In particular, libgsasl moved from the
