--- a/THANKS
+++ b/THANKS
@@ -38,6 +38,7 @@ Gazsó Attila
 Adam Goode <adam@spicenitz.org>
 Andery Melnikov <temnota.am@gmail.com>
 Vincent Untz <vuntz@opensuse.org>
+Marco Maggi <marco.maggi-ipsu@poste.it>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
