--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,8 @@ directory categories to use.  In particular, libgsasl moved from the
 'GNU Libraries' section to the 'Software libraries' as GNU SASL, and
 'Invoking gsasl' moved from 'GNU utilities' to 'Security'.
 
+** examples: Removed unneeded 'ctx' parameter from client_authenticate.
+
 ** Building with many warning flags now requires --enable-gcc-warnings.
 This avoids crying wolf for normal compiles.
 
