--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.2 (unreleased)
+* Version 1.2 (released 2009-06-13)
 
 ** gsasl: Fix out of bounds write when in IMAP/SMTP mode.
 Reported by Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de> in
